# pypi-haskell

./: .gitreview  .zuul.yaml  Makefile  README.md  groups  project.config  pypi.cabal
app/: Main.hs
src/: Pypi.hs
src/Pypi/: Project.hs
test/: Spec.hs
test/data/: ansible.json
