cabal-version:       2.4
name:                pypi
version:             0.0.0.0
synopsis:            A pypi client library
description:
    Pypi is a client library to interface with https://pypi.org.
    .
    Use this library to query and decode PyPI REST API.
    .
license:             Apache-2.0
license-file:        LICENSE
author:              Software Factory Dev
maintainer:          Software Factory Dev <softwarefactory-dev@redhat.com>
copyright:           2020 Red Hat
category:            Development
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5

common common-options
  build-depends:       base
                     , bytestring
                     , aeson
                     , containers
                     , http-client
                     , http-client-tls
                     , text

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -- Let's keep unused imports around as documentation purpose
                       -Wno-unused-imports
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:  NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Pypi
                     , Pypi.Project

executable pypi-cli
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       pypi
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite pypi-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       pypi
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
